# sodl-impl-v1

./: .dockerignore  .gitignore  CNAME  README.md  context7.json  pyproject.toml  sodl-language-concepts.excalidraw  sodl-project-architecture.excalidraw
.agents/skills/sodl/: SKILL.md  reference.md
.github/workflows/: deploy.yml
.sodl/: API_REFERENCE.md  BEST_PRACTICES.md  DOCUMENTATION_INDEX.md  EXAMPLES_COLLECTION.md  README.md  SODL_DOCUMENTATION.md  SODL_spec_05.md  SYNTAX_REFERENCE.md  library_example.sodl  sodlcompiler.sodl  spec_sample.sodl
examples/: ModernTodoApp.sodl  PresentationGenerator.sodl  constraints_example.sodl  jd_matching.sodl  react-demo.sodl  vst_host_plugin.sodl  web_ui.sodl
sodl-spec-generator-skill/sodl-spec-generator/: README.md  SKILL.md
sodl-spec-generator-skill/sodl-spec-generator/references/: sodl-quick-reference.md
sodl-spec-generator-skill/sodl-spec-generator/scripts/: sodl_validator.py
sodl-vscode-extension/: CHANGELOG.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json
sodl-vscode-extension/src/: extension.ts
sodl-vscode-extension/syntaxes/: sodl.tmLanguage.json
sodl_mcp/: .gitignore  CHANGELOG.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  mcp-config-example.json  pyproject.toml  requirements.txt
sodl_mcp/sodl_mcp/: __init__.py  server.py
sodl_mcp/tests/: __init__.py  test_integration.py  test_resources.py  test_tools.py
sodlcompiler/: API_USAGE.md  __main__.py  ast.py  compiler.py  errors.py  lexer.py  parser.py  semantic_analyzer.py
tests/: debug_full_tokens.py  debug_lexer.py  debug_tokens.py  simple_test.py  test_compiler.py  test_example.py
tests/sodls/: comprehensive_test.sodl  test_generics.sodl
utils/: analyze_sodl.py  convert_md_to_pdf.py  convert_md_to_pdf_reportlab.py  validate_sodl.py  verify_setup.py
website/: astro.config.mjs  package-lock.json  package.json  tsconfig.json  website.sodl
website/.astro/: data-store.json  settings.json
website/src/components/: ChaptersGrid.astro  CodePreview.astro  ContactBanner.astro  Context7Widget.astro  FeatureCard.astro  FeatureGrid.astro  Hero.astro  Navigation.astro  PhilosophyStrip.astro  (+4 more)
(+19 files in other folders)
